# quick-http-messages

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh
include/messenger/: configuration.h  event.h  messenger.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  common.h  logger.h  logger_time.cpp  periodic_task.cpp  periodic_task.h  udplib.h
lib/http/: CMakeLists.txt  http_parser_core.cpp  http_parser_core.h  http_types.h  parser.cpp  parser.h  uri_t.cpp  uri_t.hpp  util.cpp  util.h
lib/udp/: CMakeLists.txt  udp.cpp  udp.h
lib/uuid/: CMakeLists.txt  uuid.cpp  uuid.h
src/: CMakeLists.txt
src/messenger/: CMakeLists.txt  messenger.cpp  messenger_configuration.cpp  messenger_neighbour_node.cpp  messenger_router.cpp  messenger_utils.cpp
test/: CMakeLists.txt  configuration_test.cpp  http_test.cpp  messenger_test.cpp  route_matching_test.cpp  send_request_test.cpp  udp_test.cpp
test/utils/: datatype.h  example_common_types.h  test_utils.h  tutorial_relay_service.cpp  tutorial_relay_service.h  tutorial_time_service.cpp  tutorial_time_service.h
